syntax = "proto3";

package grpc.health.v1;

option go_package = "github.com/synchme/internal/proto/healthcheck;healthcheck";

message HealthCheckRequest {
    string service = 1; // The name of the service the client wants to know the status
}

message HealthCheckResponse {
    enum ServingStatus {
        UNKNOWN = 0;          // The server doesnâ€™t know this service (maybe never registered).
        SERVING = 1;          // The service is up and working as expected.
        NOT_SERVING = 2;      // The service is running but unhealthy (misconfigured, degraded, etc).
        SERVICE_UNKNOWN = 3;  // Used only by the Watch method.
    }
    ServingStatus status = 1;
}

service Health {
    rpc Check(HealthCheckRequest) returns (HealthCheckResponse);
    rpc Watch(HealthCheckRequest) returns (stream HealthCheckResponse);
}